fix: css bug on small sizes & font size

--- a/_sass/reset.scss
+++ b/_sass/reset.scss
@@ -64,10 +64,6 @@ img {
   max-width: 700px;
 }
 
-ol, ul {
-  margin-left: 35px;
-}
-
 p {
   margin-bottom: 2vh;
   text-align: justify;
